# light-api-mock

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  smoke-test.ps1  test.json
examples/: regate-mocks.json
frontend/: README.md  index.html  package-lock.json  package.json  playwright.config.js  vite.config.js  vitest.config.js
frontend/e2e/: config.spec.mjs  critical-flows.spec.js  insee.spec.mjs  rules.spec.mjs  security.spec.js
frontend/src/: App.svelte  app.css  main.js  tokens-aurora.css
frontend/src/lib/: api.js  auth.svelte.js  tpl-utils.js
frontend/src/lib/components/: ConditionForm.svelte  GroupManager.svelte  JsonPasteBuilder.svelte  JsonResponseBuilder.svelte  LoginForm.svelte  Notification.svelte  RequestLog.svelte  ResponseEditor.svelte  RuleForm.svelte  RuleList.svelte  ServiceCard.svelte  ServiceDetail.svelte  ServiceForm.svelte  (+5 more)
frontend/src/tests/: Notification.test.js  RuleForm.test.js  RuleList.test.js  ServiceCard.test.js  ServiceForm.test.js  ServiceList.test.js  StatusBadge.test.js  ToggleSwitch.test.js  tpl-utils.test.js
k8s/: README.md  configmap.yaml  deployment.yaml  kustomization.yaml  pvc.yaml  routetable.yaml  service.yaml  upstream.yaml  virtualservice.yaml
scripts/: bootstrap-linux.sh  bootstrap-windows.ps1
src/: README.md  main.rs
src/auth/: keycloak.rs  middleware.rs  mod.rs
src/engine/: matcher.rs  mod.rs  proxy.rs  renderer.rs  script.rs  template.rs
src/models/: mod.rs
src/server/: api.rs  codegen.rs  intercept.rs  mod.rs  request_log.rs  validation.rs
src/store/: mod.rs
